# ZenPi

./: .gitignore  Cargo.toml  README.md
operational_files/: zenpi.service
src/: main.rs
src/api/: api.rs  mod.rs
src/file_controller/: file_controller.rs
src/media_controller/: media_controller.rs  mod.rs
time_capsule/ZENPLAYER/: buttons.cpp  buttons.h
