[package]
name = "zenplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
features = "0.10.0"
log = "0.4.19"
mpv = "0.2.3"
poem = "1.3.56"
serde = "1.0.171"
tokio = {version = "1.29.1", features = ["rt-multi-thread"]}
