[package]
name = "zenplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
env_logger = "0.10.0"
features = "0.10.0"
log = "0.4.19"
mpv = "0.2.3"
poem = { version = "1.3.56", features = ["multipart"] }
serde = "1.0.171"
serde_json = "1.0.114"
tokio = {version = "1.29.1", features = ["rt-multi-thread"]}
uuid = { version = "1.7.0", features = ["v4"] }
